Combine Aix sample command ref into one topic

--- a/hu-aix-80.adoc
+++ b/hu-aix-80.adoc
@@ -21,7 +21,7 @@ The AIX Host Utilities support the following transport protocols and AIX environ
 * AIX Multipath I/O (MPIO) (Native OS)
 * PowerVM 
 +
-For more information about PowerVM, see the IBM PowerVM Live Partition Mobility Red Book.
+For information about PowerVM, see the IBM PowerVM Live Partition Mobility Red Book.
 
 .About this task
 * You download the AIX Host Utilities from the NetApp Support site in a compressed `tar.gz` file.
