--- a/hu_aix_71.adoc
+++ b/hu_aix_71.adoc
@@ -68,6 +68,4 @@ include::_include/hu/aix-asa-aff-fas-examples.adoc[]
 
 The AIX 7.1 with ONTAP storage release has no known issues.
 
-== What's next?
-
-link:hu_aix_61_cmd.html[Learn about using the AIX Host Utilities 6.1 tool].
+include::_include/hu/aix-command-reference-whats-next.adoc[]
