--- a/hu-aix-rn.adoc
+++ b/hu-aix-rn.adoc
@@ -13,7 +13,7 @@ summary: Release Notes for AIX Host Utilities 6.1
 :imagesdir: ./media/
 
 [.lead]
-The release notes describe new features and enhancements, issues fixed in the current release, known problems and limitations, and important cautions related to configuring and managing your specific AIX host with your ONTAP storage system.
+The release notes describe new features and enhancements, issues fixed in the current release, known issues and limitations, and important cautions related to configuring and managing your specific AIX host with your ONTAP storage system.
 
 For specific information about the operating system versions and updates that the Host Utilities support, see the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^].
 
@@ -36,13 +36,14 @@ AIX Host Utilities 6.1 includes support for the memory fault issue that occurred
 == Known problems and limitations
 You should be aware of the following known problems and limitations that might impact performance on your specific host:
 
-[cols=3,options="header"]
+[cols=4,options="header"]
 |===
-|Bug ID	|Title	|Description
+|Bug ID	|Title	|Description | Affects version
 |N/A
-|SCSI UNMAP support for ONTAP iSCSI LUNs |AIX Host Utilities 7.0 only supports the SCSI UNMAP feature for FC devices. SCSI UNMAP support for iSCSI devices are not included in this release.
+|SCSI UNMAP support for ONTAP iSCSI LUNs |AIX Host Utilities 7.0 only supports the SCSI UNMAP feature for FC devices. SCSI UNMAP support for iSCSI devices are not included in this release. | 7.0
 |link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1069147[1069147^]
 |AIX HU Sanlun reports incorrect HBA speed	|Instances of sanlun displaying incorrect HBA speeds are reported while running the `sanlun fcp show adapter –v` command.  The `sanlun fcp show adapter –v` command displays the HBA cards information, such as supported and negotiated speeds for the adapters. This seems to be a reporting issue only. To identify the actual speed, use the `fcstat fcsx` command.
+|
 |===
 
 link:https://mysupport.netapp.com/site/[NetApp Bugs Online^] provides complete information for most known issues, including suggested workarounds where possible. Some keyword combinations and bug types that you might want to use include the following:
