--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -85,9 +85,7 @@ The IBM AIX 7.2 and/or PowerVM (VIOS 3.1) with ONTAP storage release has the fol
 
 |===
 
-== What's next?
-
-link:hu_aix_61_cmd.html[Learn about the AIX Host Utilities 6.1 tool].
+include::_include/hu/aix-command-reference-whats-next.adoc[]
 
 //GitHub issue #114
 // BURT 1483343, 2022-16-06
