--- a/hu-luhu-80.adoc
+++ b/hu-luhu-80.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: hu_luhu_71.html
-keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
-summary: Describes how to use the Linux Host Utilities 7.1 with ONTAP
+permalink: hu-luhu-80.html
+keywords: host utilities, unified, oracle, linux, 8.0, netapp, ontap
+summary: Describes how to use the Linux Host Utilities 8.0 with ONTAP
 ---
-= Install Linux Host Utilities 7.1 for ONTAP storage
+= Install Linux Host Utilities 8.0 for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,7 +13,7 @@ summary: Describes how to use the Linux Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities assists you to manage ONTAP storage attached to a Linux host. NetApp strongly recommends installing the Linux Host Utilities, but it isn't mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration. 
+The Linux Host Utilities assists you to manage ONTAP storage attached to a Linux host. NetApp strongly recommends installing the Linux Host Utilities, but it isn't mandatory. The utilities don't change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration. 
 
 The following Linux distributions are supported:
 
@@ -21,13 +21,12 @@ The following Linux distributions are supported:
 *	SUSE Linux Enterprise Server
 *	Oracle Linux
 *	Oracle VM
-*	Citrix XenServer
 
 NOTE: The Linux Host Utilities software doesn't support NVMe over Fibre Channel (NVMe/FC) and NVMe over TCP (NVMe/TCP) host protocols.
 
 .About this task
 
-The NetApp Linux Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] in a 32-bit or 64-bit .rpm file. 
+The NetApp Linux Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] in a 64-bit .rpm file. 
 
 .Before you begin
 * For reliable operation, use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify your iSCSI, FC, or FCoE configuration is supported.
@@ -37,9 +36,6 @@ The management software enables the SAN Toolkit commands to gather information a
 +
 ** Marvell QLogic HBA – QConvergeConsole CLI
 ** Broadcom Emulex HBA - OneCommand Manager core application CLI
-** Marvell Brocade HBA – Brocade Command Utility CLI
-
-* Install the RPM "libhbaapi" and "libhbalinux" packages available for each Linux distribution on the Linux host OS.
 
 .Steps
 
@@ -47,12 +43,12 @@ The management software enables the SAN Toolkit commands to gather information a
 +
 [source, cli]
 ----
-rpm -e netapp_linux_unified_host_utilities-7-1
+rpm -e netapp_linux_unified_host_utilities-8-0
 ----
 +
 For earlier versions of Linux Host Utilities, go to the directory where the host utility software is installed and enter the uninstall command to remove the installed package.
 
-. Download the 32-bit or 64-bit Linux Host Utilities software package from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] to your host.
+. Download the 64-bit Linux Host Utilities software package from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] to your host.
 
 . Go to the directory to which you downloaded the software package and install it:
 +
@@ -67,7 +63,16 @@ Preparing...                          ################################# [100%]
 Updating / installing...
    1:netapp_linux_unified_host_utiliti################################# [100%]
 ----
++
+[NOTE]
+====
+You need to link to the HBA library for an Ubuntu host OS:
 
+[source, cli]
+----
+cp /opt/QLogic_Corporation/QConvergeConsoleCLI/lib64/libHBAAPI.so.2.0.2 /usr/lib64/libHBAAPI.so`
+----
+====
 . Verify the installation:
 +
 [source, cli]
