--- a/hu-aix-73.adoc
+++ b/hu-aix-73.adoc
@@ -190,6 +190,4 @@ include::_include/hu/aix-asa-aff-fas-examples.adoc[]
 
 There are no known issues.
 
-== What's next?
-
-link:hu-aix-80-command-reference.html[Learn about using the AIX Host Utilities 8.0 tool].
+include::_include/hu/aix-command-reference-whats-next.adoc[]
