--- a/hu-aix-san-toolkit.adoc
+++ b/hu-aix-san-toolkit.adoc
@@ -32,7 +32,4 @@ data_vserver   /vol/vol4/lun4 hdisk14 fcs0   FCP      20g C
 
 NOTE: This toolkit is common across all Host Utilities configurations and protocols. As a result, all of the components don't apply to every configuration. Unused components don't affect your system performance. The SAN Toolkit is supported on AIX and PowerVM/VIOS OS versions.
 
-== What's next?
-
-* link:hu-aix-80-command-reference.html[Learn about using the AIX Host Utilities 8.0 tool].
-* link:hu-aix-61-command-reference.html[Learn about using the AIX Host Utilities 6.1 tool].
+include::_include/hu/aix-command-reference-whats-next.adoc[]
