Update cross references to Solaris command reference

--- a/hu-solaris-release-notes.adoc
+++ b/hu-solaris-release-notes.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
-permalink: hu-solaris-rn.html
-keywords: Host Utilities, solaris, 6.2 netapp, ontap
-summary: Release notes for Solaris Host Utilities 6.2
+permalink: hu-solaris-release-notes.html
+keywords: Host Utilities, solaris, 6.2, 8.0, netapp, ontap
+summary: Release notes for Solaris Host Utilities.
 ---
 = Solaris Host Utilities Release Notes
 :hardbreaks:
