--- a/_include/hu/linux-configure-kvm-note.adoc
+++ b/_include/hu/linux-configure-kvm-note.adoc
@@ -1,1 +1,1 @@
-NOTE: You don't need to configure Kernel-based Virtual Machine (KVM) settings because ONTAP LUNs are automatically mapped to the KVM hypervisor.
+NOTE: You don't need to manually configure Kernel-based Virtual Machine (KVM) settings because ONTAP LUNs are automatically mapped to the hypervisor.
